test/fails/bad_types/bad_assign3.lgl
void main() {
    a->b m = [[1., 2.], [2., 1.]];
}